--- a/computation-local/pom.xml
+++ b/computation-local/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>computation</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
