--- a/computation-mpi-util/pom.xml
+++ b/computation-mpi-util/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>iidm-network-impl</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
