--- a/contingency-api/pom.xml
+++ b/contingency-api/pom.xml
@@ -27,6 +27,11 @@
             <artifactId>iidm-network-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
