Use staxutils.version property

--- a/pom.xml
+++ b/pom.xml
@@ -284,7 +284,7 @@
             <dependency>
                 <groupId>net.java.dev.stax-utils</groupId>
                 <artifactId>stax-utils</artifactId>
-                <version>20070216</version>
+                <version>${staxutils.version}</version>
                 <exclusions>
                     <exclusion>
                         <groupId>com.bea.xml</groupId>
