Groovy Identifiable properties access
Groovy Identifiable properties access

--- a/iidm-converter-api/pom.xml
+++ b/iidm-converter-api/pom.xml
@@ -92,5 +92,11 @@
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>eu.itesla_project</groupId>
+            <artifactId>iidm-network-impl</artifactId>
+            <version>${project.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
