Add LocalComputationManager unit test (#42)
Add LocalComputationManager unit test

--- a/computation-local/pom.xml
+++ b/computation-local/pom.xml
@@ -19,6 +19,10 @@
     <name>Local computation</name>
     <dependencies>
         <dependency>
+            <groupId>net.java.truevfs</groupId>
+            <artifactId>truevfs-driver-zip</artifactId>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>commons</artifactId>
             <version>${project.version}</version>
