--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
         <graphvizapi.version>1.1</graphvizapi.version>
         <groovy.version>2.4.7</groovy.version>
         <guava.version>20.0</guava.version>
+        <jama.version>1.0.3</jama.version>
         <jimfs.version>1.1</jimfs.version>
         <jodatime.version>2.9.7</jodatime.version>
         <junit.version>4.12</junit.version>
@@ -278,6 +279,11 @@
                 <version>${commonscli.version}</version>
             </dependency>
             <dependency>
+                <groupId>gov.nist.math</groupId>
+                <artifactId>jama</artifactId>
+                <version>${jama.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>joda-time</groupId>
                 <artifactId>joda-time</artifactId>
                 <version>${jodatime.version}</version>
@@ -359,6 +365,12 @@
             </dependency>
             
             <!-- Test dependencies -->
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava-testlib</artifactId>
+                <version>${guava.version}</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
