--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
         <graphvizapi.version>1.1</graphvizapi.version>
         <groovy.version>2.4.7</groovy.version>
         <guava.version>20.0</guava.version>
+        <jackson.version>2.8.7</jackson.version>
         <jama.version>1.0.3</jama.version>
         <jimfs.version>1.1</jimfs.version>
         <jodatime.version>2.9.7</jodatime.version>
@@ -291,6 +292,11 @@
     <dependencyManagement>
         <dependencies>
             <!-- Compile dependencies -->
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.google.auto.service</groupId>
                 <artifactId>auto-service</artifactId>
