--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
     Copyright (c) 2016, All partners of the iTesla project (http://www.itesla-project.eu/consortium)
-    Copyright (c) 2016, RTE (http://www.rte-france.com)
+    Copyright (c) 2016-2017, RTE (http://www.rte-france.com)
     This Source Code Form is subject to the terms of the Mozilla Public
     License, v. 2.0. If a copy of the MPL was not distributed with this
     file, You can obtain one at http://mozilla.org/MPL/2.0/.
@@ -119,6 +119,12 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>loadflow-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>loadflow-validation</artifactId>
             <version>${project.version}</version>
         </dependency>
 
