--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>iidm-test</module>
         <module>iidm-xml-converter</module>
         <module>loadflow-api</module>
+        <module>loadflow-validation</module>
         <module>math</module>
         <module>security-analysis</module>
         <module>simulation-api</module>
@@ -63,6 +64,7 @@
         <autoservice.version>1.0-rc2</autoservice.version>
         <commonscli.version>1.3.1</commonscli.version>
         <commonscompress.version>1.13</commonscompress.version>
+        <commonsio.version>2.5</commonsio.version>
         <commonsmath3.version>3.6.1</commonsmath3.version>
         <graphvizapi.version>1.1</graphvizapi.version>
         <groovy.version>2.4.7</groovy.version>
@@ -413,6 +415,12 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava-testlib</artifactId>
                 <version>${guava.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>commons-io</groupId>
+                <artifactId>commons-io</artifactId>
+                <version>${commonsio.version}</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
