--- a/computation-local/pom.xml
+++ b/computation-local/pom.xml
@@ -23,6 +23,10 @@
             <artifactId>truevfs-driver-zip</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>commons</artifactId>
             <version>${project.version}</version>
