--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
         <commonscli.version>1.3.1</commonscli.version>
         <commonscompress.version>1.13</commonscompress.version>
         <commonsio.version>2.5</commonsio.version>
+        <commonslang3.version>3.4</commonslang3.version>
         <commonsmath3.version>3.6.1</commonsmath3.version>
         <graphvizapi.version>1.1</graphvizapi.version>
         <groovy.version>2.4.7</groovy.version>
@@ -318,6 +319,11 @@
                 <groupId>commons-cli</groupId>
                 <artifactId>commons-cli</artifactId>
                 <version>${commonscli.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-lang3</artifactId>
+                <version>${commonslang3.version}</version>
             </dependency>
             <dependency>
                 <groupId>gov.nist.math</groupId>
